- Fixed a problem with BuddyPress profile integration.
- Fixed a warning message for ob_end_flush() in older version of PHP.
- Improved appointments calendars, now starts on day set in WordPress options.
- Fixed a problem with appointments details, the start hour of appointment is now depend of settings.
- Fixed a problem with tutorial restart.

2018-03-27 - 2.2.5
-------------------------------
- Added filter 'app-export-appointment-args' which allows changing export arguments eg. sorting field.
- Fixed incompatibilities with Divi Builder.
- Fixed missing sortings on the frontend.
- Fixed problems with changing the custom time for slots.
- Fixed problem with paddings.
- Fixed re-send confirmation emails.
- Improved Yes/No choice used on appointments configuration screen.

2018-01-29 - 2.2.4
-------------------------------
- Fixed a problem with the export of single appointment.
- Fixed a problem with no visible slots on Weekly Calendar view.
- Fixed a problem with viewing PayPal transaction.
- Fixed potential vulnerabilities in appointments list.
- Improved "Create an Appointment Page" UX.
- Improved default additional CSS to avoid interaction with default classes.
- Improved help tab, now we use WordPress built-in help tab.

2017-11-21 - 2.2.3
-------------------------------
- Fixed export additional appointment fields (only PRO version).
- Fixed problem with bower_components directory.
- Fixed problem with extra information displayed in the wrong column.
- Fixed problem with no visible slots on Monthly view.
- Fixed problem with too many emails.
- Fixed problem with worker shortcode.
- Fixed URL building for dismissing a message.
- Moved external sources into one parent directory.
- Prevent process if a user does not exist.
- Removed wp_enqueue_* functions from views.
- Updated Unslider to version 2.0.3.

2017-10-16 - 2.2.2.2
-------------------------------
- Fixed security issue (vulnerability) with appointments actions. Props for Rolf Allard van Hagen.
