@@ -7,6 +7,7 @@
 - Improved appointments calendars, now starts on day set in WordPress options.
 - Fixed a problem with appointments details, the start hour of appointment is now depend of settings.
 - Fixed a problem with tutorial restart.
+- Added asterix to required fields label on appointment form.
 
 2018-03-27 - 2.2.5
 -------------------------------
